part1/random-string/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-string-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-string
  template:
    metadata:
      labels:
        app: random-string
    spec:
      containers:
        - name: random-string
          image: mohago/k8s-go-101
          resources:
            limits:
              memory: "128Mi"
              cpu: "256m"
