part1/random-string/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-string-svc
spec:
  type: ClusterIP
  selector:
    app: random-string
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 3030
